--- a/.gitignore
+++ b/.gitignore
@@ -39,7 +39,7 @@ local.properties
 node_modules/
 npm-debug.log
 yarn-error.log
-
+package-lock.json
 # Bundle artifacts
 *.jsbundle
 
@@ -53,3 +53,5 @@ yarn-error.log
 .expo/
 web-build/
 dist/
+
+
