--- a/package.json
+++ b/package.json
@@ -9,11 +9,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@mui/material": "^5.13.7",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/stack": "^6.3.17",
     "expo": "~48.0.18",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.8"
+    "react-native": "^0.71.8",
+    "react-native-gesture-handler": "^2.12.0",
+    "react-native-screens": "^3.22.1",
+    "react-native-web": "~0.18.11",
+    "react-redux": "^8.1.1",
+    "redux": "^4.2.1",
+    "@expo/webpack-config": "^18.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
